--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://namdar.github.io/project3Hosting",
-  "name": "p3-namdar25",
+  "name": "project3Hosting",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +20,7 @@
   },
   "scripts": {
 	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build",
+	"deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
